--- a/src/style.css
+++ b/src/style.css
@@ -81,6 +81,37 @@ main {
   font-size: 28px;
 }
 
+.forecast {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 30px;
+}
+
+.forecast-date {
+  font-size: 16px;
+  text-align: center;
+  margin-bottom: 10px;
+  line-height: 20px;
+  color: rgba(39, 33, 66, 0.4);
+}
+
+.forecast-icon {
+  font-size: 38px;
+  text-align: center;
+}
+
+.forecast-temps {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  margin-top: 10px;
+  color: #f65282;
+}
+
+.forecast-temp {
+  padding: 0 10px;
+}
+
 footer {
   border-top: 1px solid #f9f7fe;
   padding: 30px 0 0 0;
