--- a/src/style.css
+++ b/src/style.css
@@ -96,8 +96,10 @@ main {
 }
 
 .forecast-icon {
-  font-size: 38px;
-  text-align: center;
+  width: 78px;
+  height: 78px;
+  display: block;
+  margin: 0 auto;
 }
 
 .forecast-temps {
